# qa_guru_python_1_15

./: pyproject.toml
