[tool.poetry]
name = "qa_guru_python_1_15"
version = "0.1.0"
description = ""
authors = ["Helpmerunaway <solovyovri@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = ">=2.0.0b5"
pytest = "7.1.2"

[tool.poetry.dev-dependencies]
pylint = "2.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
